# ytui

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
tests/: test_bugs.py  test_features.py
ytui/: __init__.py  app.py  constants.py
ytui/config/: keybindings.py  keyring_store.py  profiles.py  settings.py
ytui/engine/: downloader.py  ffmpeg.py  metadata.py  progress.py  updater.py
ytui/i18n/: en.json
ytui/queue/: manager.py  models.py  persistence.py  scheduler.py
ytui/screens/: main_screen.py  panels.py  settings_panel.py
ytui/themes/: __init__.py  default.tcss  dracula.tcss  gruvbox.tcss  light.tcss  midnight.tcss  nord.tcss  solarized-dark.tcss
ytui/utils/: __init__.py  clipboard.py  filesystem.py  format_resolution.py  formatting.py  notifications.py  urls.py  vpn.py
ytui/vpn/: base.py  monitor.py  protonvpn_linux.py  wireguard.py
ytui/widgets/: ascii_banner.py  boot_screen.py  command_suggestions.py  header_bar.py  input_bar.py  queue_item.py  queue_panel.py
